Import bootstrap.css to polish the tab

--- a/src/root/root.scss
+++ b/src/root/root.scss
@@ -1,7 +1,9 @@
 header {
-    background: red;
+    background: white;
+    margin: 20px
 }
 
 main {
-    background: green
+    background: green;
+    margin: 20px
 }
