Finish nav tabs

--- a/src/root/root.scss
+++ b/src/root/root.scss
@@ -1,9 +1,12 @@
+div#root {
+    margin: 1rem 3rem
+}
+
 header {
-    background: white;
-    margin: 20px
+    background: white
 }
 
 main {
-    background: green;
-    margin: 20px
+    background: cyan;
+    margin-top: 0.5rem
 }
